--- a/DataTemplates.xaml
+++ b/DataTemplates.xaml
@@ -1,8 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:DataBinding_6">
+                    xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
+                    xmlns:local="clr-namespace:DataBinding_6"
+                    xmlns:localModel="clr-namespace:DataBinding_6.Models">
 
-    <DataTemplate x:Key="PersonClass" DataType="{x:Type local:Person}">
+    <DataTemplate x:Key="PersonClass" DataType="{x:Type localModel:Person}">
         <Grid Width="200">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70" />
@@ -15,13 +17,13 @@
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <TextBox Text="{Binding Path=ID}" Height="23" Grid.Column="1" Grid.Row="0"
-                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsEnabled="False" />
+                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" IsEnabled="False" x:Name="txtID"/>
             <TextBox Text="{Binding Path=Fornavn}" Height="23" Grid.Column="1" Grid.Row="1"
-                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="txtFornavn"/>
             <TextBox Text="{Binding Path=Efternavn}" Height="23" Grid.Column="1" Grid.Row="2"
-                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="txtEfternavn" />
             <TextBox Text="{Binding Path=Formue}" Height="23" Grid.Column="1" Grid.Row="3" 
-                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                             HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="txtFormue" />
             <TextBlock Grid.Row="0" Height="23" HorizontalAlignment="Left" Text="ID" 
                              VerticalAlignment="Center" />
             <TextBlock Grid.Row="1" Height="23" HorizontalAlignment="Left" Text="Fornavn" 
